# objectobject.ca

./: .gitignore  README.md  cdk.json  cdktf.json  compose.override.yml  compose.yml  noxfile.py  pyproject.toml
.github/workflows/: deploy.yml
codedeploy/: appspec.yml  compose.override.yml  compose.yml
codedeploy/alloy/: config.alloy
codedeploy/gatus/: config.yml
codedeploy/hooks/: application-start.sh  application-stop.sh  validate-service.sh
src/objectobject_ca/aws/: app.py  stack.py
src/objectobject_ca/aws/utils/: cfn.py
src/objectobject_ca/common/: logging.py
src/objectobject_ca/terraform/: app.py  stack.py
